--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -37,6 +37,8 @@
         "build/**",
         "dist/**",
         "**/reset*.css",
-        "**/bootstrap*.css"
+        "**/bootstrap*.css",
+        "**/application.bootstrap.scss",
+        "**/application.css"
     ]
 }
